--- a/poc/src/main/resources/org/epa/mda/poc/Facility_EPA_Admin_Approval-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/Facility_EPA_Admin_Approval-taskform.form
@@ -3,4 +3,133 @@
 <property name="name" value="Facility_EPA_Admin_Approval-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="facility_id" type="InputText" id="903676237">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;id (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/id"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="facility_name" type="InputText" id="1159746819">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;name (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/name"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="facility_city" type="InputText" id="736418995">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;city (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="facility_state" type="InputText" id="277483558">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;state (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/state"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="facility_zip" type="InputText" id="872525066">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;zip (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/zip"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="facility_county" type="InputText" id="613496156">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;county (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/county"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="facility_address" type="InputText" id="2139133394">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;address (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="facility_associatedCompany" type="InputText" id="3002395">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;associatedCompany (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/associatedCompany"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="8" name="facility_fips" type="InputText" id="1785394">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;fips (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/fips"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="9" name="facility_businessActivity1" type="InputText" id="1812743459">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;businessActivity1 (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/businessActivity1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="10" name="facility_businessActivity2" type="InputText" id="2065290709">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;businessActivity2 (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/businessActivity2"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="11" name="facility_part79" type="CheckBox" id="1510830225">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;part79 (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/part79"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="12" name="facility_part80" type="CheckBox" id="607175128">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;part80 (facility)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="facilityIn/part80"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="13" name="ticketNumber" type="InputText" id="1947312567">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;ticketNumberIn (ticketNumber)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="ticketNumberIn"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="14" name="840009843" type="CheckBox" id="840009843">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Activatequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="activatedOut"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="15" name="1819274821" type="CheckBox" id="1819274821">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Acceptquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="acceptedOut"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="16" name="292148204" type="CheckBox" id="292148204">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Push Backquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="pushBackOut"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<dataHolder inputId="facilityIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Facility" id="facility"/>
+<dataHolder inputId="ticketNumberIn" name="#E9E371" type="basicType" outId="" value="java.lang.String" id="ticketNumber"/>
 </form>
