--- a/poc/src/main/resources/org/epa/mda/poc/Product_SRA_Assign_Ticket_Number-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/Product_SRA_Assign_Ticket_Number-taskform.form
@@ -3,4 +3,30 @@
 <property name="name" value="Product_SRA_Assign_Ticket_Number-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="product_name" type="InputText" id="802768016">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;name (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/name"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="product_productDescription" type="InputText" id="1499599770">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;productDescription (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/productDescription"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="39644419" type="InputText" id="39644419">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Ticket Numberquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="outputBinding" value="ticketNumberOut"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="productIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Product" id="product"/>
 </form>
