{/poc/src/main/resources/org/epa/mda/poc/Product_Team_Member_Review-taskform.form}

--- a/poc/src/main/resources/org/epa/mda/poc/Product_Team_Member_Review-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/Product_Team_Member_Review-taskform.form
@@ -3,4 +3,61 @@
 <property name="name" value="Product_Team_Member_Review-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="product_name" type="InputText" id="662323562">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;name (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/name"/>
+<property name="outputBinding" value="productOut/name"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="product_elementName" type="InputText" id="171502096">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;elementName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/elementName"/>
+<property name="outputBinding" value="productOut/elementName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="product_percentMakeup" type="InputTextInteger" id="1230429869">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;percentMakeup (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/percentMakeup"/>
+<property name="outputBinding" value="productOut/percentMakeup"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="3" name="product_productDescription" type="InputText" id="275473462">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;productDescription (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/productDescription"/>
+<property name="outputBinding" value="productOut/productDescription"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="product_associatedCompany" type="InputText" id="2134059643">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;associatedCompany (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/associatedCompany"/>
+<property name="outputBinding" value="productOut/associatedCompany"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="product_companyId" type="InputText" id="388421854">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyId"/>
+<property name="outputBinding" value="productOut/companyId"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="ticketNumber" type="InputText" id="375370842">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;ticketNumberIn (ticketNumber)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="ticketNumberIn"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="productIn" name="#E9E371" type="dataModelerEntry" outId="productOut" value="org.epa.mda.poc.Product" id="product"/>
+<dataHolder inputId="ticketNumberIn" name="#E9E371" type="basicType" outId="" value="java.lang.String" id="ticketNumber"/>
 </form>
