--- a/poc/src/main/resources/org/epa/mda/poc/Product_EPA_Admin_Approval-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/Product_EPA_Admin_Approval-taskform.form
@@ -3,76 +3,27 @@
 <property name="name" value="Product_EPA_Admin_Approval-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="product_name" type="InputText" id="874666223">
+<field position="0" name="811097316" type="CheckBox" id="811097316">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;name (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="productIn/name"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="1" name="product_elementName" type="InputText" id="85583143">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;elementName (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="productIn/elementName"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="product_percentMakeup" type="InputTextInteger" id="421296154">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;percentMakeup (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="productIn/percentMakeup"/>
-<property name="fieldClass" value="java.lang.Integer"/>
-</field>
-<field position="3" name="product_productDescription" type="InputText" id="1082511823">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;productDescription (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="productIn/productDescription"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="4" name="product_associatedCompany" type="InputText" id="1185156037">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;associatedCompany (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="productIn/associatedCompany"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="5" name="product_companyId" type="InputText" id="240873897">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="productIn/companyId"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="6" name="ticketNumber" type="InputText" id="1202486581">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;ticketNumberIn (ticketNumber)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="ticketNumberIn"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="7" name="811097316" type="CheckBox" id="811097316">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Activatequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Activatequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="activatedOut"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
-<field position="8" name="1039926293" type="CheckBox" id="1039926293">
+<field position="1" name="1039926293" type="CheckBox" id="1039926293">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Acceptquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Acceptquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="acceptedOut"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
-<field position="9" name="2113377756" type="CheckBox" id="2113377756">
+<field position="2" name="2113377756" type="CheckBox" id="2113377756">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Push Backquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Push Backquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
