--- a/poc/src/main/resources/org/epa/mda/poc/Product_SRA_Assign_Ticket_Number-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/Product_SRA_Assign_Ticket_Number-taskform.form
@@ -14,4 +14,40 @@
 <property name="outputBinding" value="ticketNumberOut"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
+<field position="1" name="product_brandName" type="InputText" id="1875738782">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;brandName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/brandName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="product_companyName" type="InputText" id="1083489146">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="product_companyId" type="InputText" id="1841984389">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyId"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="product_city" type="InputText" id="670936183">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;city (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="product_state" type="InputText" id="802162868">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;state (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/state"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="productIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Product" id="product"/>
 </form>
